[package]
name = "coreutils-rust"
version = "0.1.1"
authors = ["Dennis Vesterlund <dennisvesterlund@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A Cat implementation in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "coreutils-rust"
path = "src/main.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "yes"
path = "src/yes.rs"

[dependencies]
clap = { version = "*", features = ["yaml"] }

