[package]
name = "coreutils-rust"
version = "0.1.6"
authors = ["Dennis Vesterlund <dennisvesterlund@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A Cat implementation in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "coreutils-rust"
path = "src/main.rs"

[[bin]]
name = "basename"
path = "src/basename.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "sleep"
path = "src/sleep.rs"

[[bin]]
name = "true"
path = "src/true.rs"

[[bin]]
name = "yes"
path = "src/yes.rs"

[[bin]]
name = "whoami"
path = "src/whoami.rs"

[dependencies]
clap = { version = "2", features = ["yaml"] }
libc = "0.2"
regex = "1"
signal-hook = "0.1"
